--- a/jenkinspipeline/Jenkinsfile
+++ b/jenkinspipeline/Jenkinsfile
@@ -2,9 +2,7 @@ pipeline{
   agent any
   stages{
      stage('Git Checkout'){
-		git credentialsId: 'NavyaSri2599', 
-		    url: 'https://github.com/NavyaSri2599/JenkinsPipelineDemo',
-			branch: "${params.gitBranch}"
+		git 'https://github.com/NavyaSri2599/JenkinsPipelineDemo'		
 	}
     stage('Compile-Package'){
       sh 'mvn package'
