--- a/DemoPipeline/JenkinsFile
+++ b/DemoPipeline/JenkinsFile
@@ -5,7 +5,7 @@ pipeline {
          stage('Compiling Stage') {
             steps {
             	withMaven(maven : 'maven_3_8_1')
-                sh 'mvn clean compile'
+                sh 'mvn clean insta'
             }
         }
          stage('Testing Stage') {
