--- a/DemoPipeline/JenkinsFile
+++ b/DemoPipeline/JenkinsFile
@@ -8,7 +8,7 @@ pipeline {
               deleteDir()
               checkout scm
             	withMaven(jdk: 'jdk1.8', maven: 'maven_3_8_1') {
-                 sh 'maven compile'
+                 bat 'maven compile'
               } 
             }
         }
@@ -16,14 +16,14 @@ pipeline {
          stage('Building Stage') {
             steps {
             		withMaven(jdk: 'jdk1.8', maven: 'maven_3_8_1') {
-                sh 'maven clean install'
+                bat 'maven clean install'
               } 
             }
         }
          stage('Deploying Stage') {
             steps {
                withMaven(jdk: 'jdk1.8', maven: 'maven_3_8_1') {
-                sh 'maven clean deploy'
+                bat 'maven clean deploy'
               } 
             }
         }
