--- a/DemoPipeline/JenkinsFile
+++ b/DemoPipeline/JenkinsFile
@@ -8,7 +8,8 @@ pipeline {
               deleteDir()
               checkout scm
             	withMaven(jdk: 'jdk1.8', maven: 'maven_3_8_1') {
-                 bat 'mvn compile'
+                bat '''cd DemoPipeline
+                     mvn compile '''
               } 
             }
         }
