--- a/DemoPipeline/pom.xml
+++ b/DemoPipeline/pom.xml
@@ -15,6 +15,14 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
   </properties>
+  
+  <distributionManagement>
+    <repository>
+        <id>nexus-releases</id>
+        <name>releases</name>
+        <url>http://myNexus/more/stuff</url>
+    </repository>
+</distributionManagement>
 
   <dependencies>
     <dependency>
